# rdp_auth

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
crates/auth_api/: Cargo.toml
crates/auth_api/src/: client.rs  error.rs  lib.rs  login_log.rs  models.rs  public_ip.rs  second_password.rs  sms.rs  test_support.rs  tests.rs  transport.rs
crates/auth_config/: Cargo.toml
crates/auth_config/src/: error.rs  file_config.rs  legacy.rs  lib.rs  login_policy.rs  machine_code.rs  protected_file.rs  schema.rs
crates/auth_core/: Cargo.toml
crates/auth_core/src/: lib.rs
crates/auth_ipc/: Cargo.toml
crates/auth_ipc/src/: lib.rs
crates/auth_logging/: Cargo.toml
crates/auth_logging/src/: lib.rs
crates/credential_provider/: Cargo.toml
crates/credential_provider/src/: class_factory.rs  credential.rs  diagnostics.rs  dll.rs  fields.rs  filter.rs  helper_client.rs  lib.rs  memory.rs  provider.rs  serialization.rs  session.rs  state.rs  timeout.rs
crates/register_tool/: Cargo.toml
crates/register_tool/src/: cli.rs  dirs.rs  guid.rs  helper_probe.rs  main.rs  paths.rs  registry.rs
crates/remote_auth/: Cargo.toml
crates/remote_auth/src/: audit.rs  audit_ip.rs  client_network.rs  diagnostics.rs  host_network.rs  main.rs  mfa.rs  pipe_server.rs  policy.rs  remote_config.rs  router.rs  session_challenge.rs  session_notification.rs  session_state.rs
docs/: Prompt.md  agent.md  architecture.md  config-encryption-test.md  configuration.md  development-summary.md  development.md  helper-ipc-test.md  install.md  logging.md  rdp-2fa-auth-sequence.md  rdp-client-ip-vm-test.md  tasks.md
scripts/: check.ps1
