[workspace]
members = [
    "crates/auth_api",
    "crates/auth_config",
    "crates/auth_core",
    "crates/auth_ipc",
    "crates/credential_provider",
    "crates/register_tool",
    "crates/remote_auth",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
