[package]
name = "auth_api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
auth_config = { path = "../auth_config" }
tracing.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
