[package]
name = "auth_config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
auth_core = { path = "../auth_core" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
winreg = "0.56.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
