[package]
name = "auth_logging"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
tracing = ["dep:anyhow", "dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]

[dependencies]
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
