[package]
name = "credential_provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
auth_core = { path = "../auth_core" }
auth_ipc = { path = "../auth_ipc" }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_UI_Shell"] }
windows-core = "0.62.2"

[lints]
workspace = true
