[package]
name = "register_tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
auth_config = { path = "../auth_config" }
auth_logging = { path = "../auth_logging" }
clap = { version = "4.5.50", features = ["derive"] }
credential_provider = { path = "../credential_provider" }
windows-core = "0.62.2"
winreg = "0.56.0"

[[bin]]
name = "register_tool"
path = "src/main.rs"

[lints]
workspace = true
