[package]
name = "remote_auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
auth_config = { path = "../auth_config" }
auth_core = { path = "../auth_core" }
auth_ipc = { path = "../auth_ipc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "remote_auth"
path = "src/main.rs"

[lints]
workspace = true
