[package]
name = "remote_auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
auth_config = { path = "../auth_config" }
auth_core = { path = "../auth_core" }
auth_ipc = { path = "../auth_ipc" }
auth_logging = { path = "../auth_logging", features = ["tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tracing.workspace = true
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }

[[bin]]
name = "remote_auth"
path = "src/main.rs"

[lints]
workspace = true
